# better-logging

./: .drone.yml  .gitignore  README.md
_etc/: docker-compose.yml  generate-events.py  postgresql.sql  requests.http  sample-config.py
backend/: pyproject.toml
backend/src/backend/: main.py
backend/src/better_logging/: core.py  main.py
backend/tests/: test_utils.py  test_version.py
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Home.vue  SearchForm.vue  Table.vue
