[tool.poetry]
name = "better-logging"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
sanic = "^19.12"
sanic-openapi = "^0.6.1"
asyncpg = "^0.20.1"
arrow = "^0.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
